terraform/Instance.tf
resource "aws_instance" "onboard_server" {
  ami               = data.aws_ami.amiID.id
  instance_type     = "t3.micro"
  key_name          = "onboardKey"
  vpc_security_group_ids = [aws_security_group.onboard_sg.id]
  availability_zone = "us-east-1a"

  tags = {
    Name    = "onboard_server"
    Project = "OnBoardForms"
  }
}

resource "aws_ec2_instance_state" "web-state" {
  instance_id = aws_instance.onboard_server.id
  state       = "running"
}
